@@ -18,6 +18,7 @@
 #include "lib_strbuf.h"
 #include "ntp_stdlib.h"
 #include "ntp.h"
+#include "ntp_debug.h"
 
 
 char *
@@ -25,12 +26,71 @@ socktohost(
 	sockaddr_u *sock
 	)
 {
-	register char *buffer;
+	const char		svc[] = "ntp";
+	char *			pbuf;
+	char *			pliar;
+	int			gni_flags;
+	struct addrinfo		hints;
+	struct addrinfo *	alist;
+	struct addrinfo *	ai;
+	int			a_info;
 
-	LIB_GETBUF(buffer);
-	if (getnameinfo(&sock->sa, SOCKLEN(sock), buffer,
-	    LIB_BUFLENGTH, NULL, 0, 0))
-		return stoa(sock);
+	/* reverse the address to purported DNS name */
+	LIB_GETBUF(pbuf);
+	gni_flags = NI_DGRAM | NI_NAMEREQD;
+	if (getnameinfo(&sock->sa, SOCKLEN(sock), pbuf, LIB_BUFLENGTH,
+			NULL, 0, gni_flags))
+		return stoa(sock);	/* use address */
 
-	return buffer;
+	DPRINTF(1, ("%s reversed to %s\n", stoa(sock), pbuf));
+
+	/*
+	 * Resolve the reversed name and make sure the reversed address
+	 * is among the results.
+	 */
+	memset(&hints, 0, sizeof(hints));
+	hints.ai_family = AF(sock);
+	hints.ai_protocol = IPPROTO_UDP;
+	hints.ai_socktype = SOCK_DGRAM;
+	hints.ai_flags = 0;
+	alist = NULL;
+
+	a_info = getaddrinfo(pbuf, svc, &hints, &alist);
+	if (a_info == EAI_NONAME
+#ifdef EAI_NODATA
+	    || a_info == EAI_NODATA
+#endif
+	   ) {
+		hints.ai_flags = AI_CANONNAME;
+#ifdef AI_ADDRCONFIG
+		hints.ai_flags |= AI_ADDRCONFIG;
+#endif
+		a_info = getaddrinfo(pbuf, svc, &hints, &alist);	
+	}
+#ifdef AI_ADDRCONFIG
+	/* Some older implementations don't like AI_ADDRCONFIG. */
+	if (a_info == EAI_BADFLAGS) {
+		hints.ai_flags &= ~AI_ADDRCONFIG;
+		a_info = getaddrinfo(pbuf, svc, &hints, &alist);	
+	}
+#endif
+	if (a_info)
+		goto forward_fail;
+
+	NTP_INSIST(alist != NULL);
+
+	for (ai = alist; ai != NULL; ai = ai->ai_next)
+		if (SOCK_EQ(sock, (sockaddr_u *)ai->ai_addr))
+			break;
+	freeaddrinfo(alist);
+
+	if (ai != NULL)
+		return pbuf;	/* forward check passed */
+
+    forward_fail:
+	DPRINTF(1, ("forward check lookup fail: %s\n", pbuf));
+	LIB_GETBUF(pliar);
+	snprintf(pliar, LIB_BUFLENGTH, "%s (%s)", stoa(sock), pbuf);
+
+	return pliar;
 }
